--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,26 @@
 {
-    "name": "laravel-frontend-presets/zurb-foundation",
-    "description": "Laravel 6.0.x Front-end preset for Zurb Foundation",
-    "keywords": ["laravel", "preset", "zurb-foundation", "foundation"],
-    "license": "MIT",
-    "require": {
-        "laravel/framework": "^5.5|^6.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "LaravelFrontendPresets\\ZurbFoundationPreset\\": "src/"
-        }
-    },
-    "extra": {
-      "laravel": {
-        "providers": [
-          "LaravelFrontendPresets\\ZurbFoundationPreset\\ZurbFoundationPresetServiceProvider"
-       ]
-      }
+  "name": "laravel-frontend-presets/zurb-foundation",
+  "description": "Laravel 6.0.x Front-end preset for Zurb Foundation",
+  "keywords": [
+    "laravel",
+    "preset",
+    "zurb-foundation",
+    "foundation"
+  ],
+  "license": "MIT",
+  "require": {
+    "laravel/framework": "^5.5|^7.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "LaravelFrontendPresets\\ZurbFoundationPreset\\": "src/"
     }
-
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "LaravelFrontendPresets\\ZurbFoundationPreset\\ZurbFoundationPresetServiceProvider"
+      ]
+    }
+  }
 }
